<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content">
<Button
android:id="@+id/ButtonSave"
android:layout_alignParentTop="true"
android:layout_height="wrap_content"
android:layout_centerInParent="true" 
android:layout_width="fill_parent"
android:text="@string/but_save">
</Button>
<TextView
android:id="@+id/ClientLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/lab_client"
android:layout_below="@+id/ButtonSave"
android:layout_alignParentLeft="true">
</TextView>
<Spinner
android:id="@+id/ClientSpinner"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_below="@+id/ClientLabel"
android:layout_alignParentLeft="true">
</Spinner>
<TextView
android:id="@+id/ProjectLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/lab_project"
android:layout_below="@+id/ClientSpinner"
android:layout_alignParentLeft="true">
</TextView>
<Spinner
android:id="@+id/ProjectSpinner"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:layout_below="@+id/ProjectLabel"
android:layout_alignParentLeft="true">
</Spinner>
<TextView
android:id="@+id/LabelDescription"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/lab_description"
android:layout_below="@+id/ProjectSpinner"
android:layout_alignParentLeft="true">
</TextView>
<EditText
android:id="@+id/Description"
android:layout_width="fill_parent"
android:layout_height="wrap_content"
android:text="@string/edit_text"
android:inputType="textCapSentences"
android:textSize="18sp"
android:layout_below="@+id/LabelDescription"
android:layout_alignParentLeft="true" 
android:selectAllOnFocus="true">
</EditText>
<TextView
android:id="@+id/StartLabel"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/lab_start"
android:layout_below="@+id/Description"
android:layout_alignParentLeft="true">
</TextView>
<EditText
android:id="@+id/StartDate"
android:layout_height="wrap_content"
android:text="@string/empty_date"
android:textSize="18sp"
android:inputType="date"
android:layout_below="@+id/StartLabel"
android:layout_alignParentLeft="true"
android:layout_width="wrap_content">
</EditText>
<EditText
android:id="@+id/StartTime"
android:layout_height="wrap_content"
android:text="@string/empty_time"
android:textSize="18sp"
android:inputType="time"
android:layout_alignTop="@+id/StartDate"
android:layout_toRightOf="@+id/StartDate"
android:layout_width="wrap_content">
</EditText>
<TextView
android:id="@+id/LabelTotal"
android:layout_width="wrap_content"
android:layout_height="wrap_content"
android:text="@string/lab_time"
android:layout_alignTop="@+id/StartLabel"
android:layout_alignLeft="@+id/TotalTime">
</TextView>
<EditText
android:id="@+id/TotalTime"
android:layout_height="wrap_content"
android:text="@string/empty_time"
android:inputType="time"
android:textSize="18sp"
android:layout_alignTop="@+id/StartDate"
android:layout_toRightOf="@+id/StartTime"
android:layout_width="wrap_content">
</EditText>
</RelativeLayout>
