<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	
	<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">

		<TextView android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/customer_name"/>
		<EditText android:layout_width="wrap_content"
            android:inputType="textCapSentences"
			android:layout_height="wrap_content" 
			android:layout_weight="1" android:id="@+id/name"/>
	</LinearLayout>
 	
 	<CheckBox android:layout_width="wrap_content" 
	          android:layout_height="wrap_content" 
	          android:id="@+id/customer_active" 
	          android:text="@string/customer_active">
	          </CheckBox>
	<Button android:id="@+id/confirm" 
	  android:text="@string/but_confirm"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content" />
</LinearLayout>