<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent" 
      android:orientation="vertical">
    <LinearLayout
        android:id="@+id/AddLayout"
        android:layout_alignParentTop="true"
        android:layout_height="wrap_content" 
        android:layout_width="fill_parent"
        android:weightSum="1.0">
            <Button android:text="@string/but_add_time" 
                    android:id="@+id/buttonAddTime" 
                    android:layout_height="wrap_content"
                     android:layout_width="wrap_content"
                    android:layout_weight=".30"></Button>
            <Button android:layout_width="wrap_content" 
                    android:text="@string/but_add_template" 
                    android:id="@+id/buttonTemplate" 
                    android:layout_height="wrap_content" android:layout_weight="0.58"></Button>
            <Spinner android:id="@+id/spinnerTemplate" android:layout_height="wrap_content" android:layout_width="43dp" android:visibility="invisible"></Spinner>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/ClockLayout"
        android:layout_below="@+id/AddLayout"
        android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_centerHorizontal="true">
        <TextView android:id="@+id/timeTotal"
                      android:layout_alignParentTop="true"
                      android:gravity="center_horizontal"
                      android:layout_width="80dp"
        	          android:layout_height="wrap_content"
        	          android:text="@string/empty_time"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/ListLayout"
        android:layout_below="@+id/ClockLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ListView android:id="@+id/android:list"
                  android:layout_width="wrap_content"
        	      android:layout_height="wrap_content"/>
  	       <TextView android:id="@+id/android:empty"
                     android:layout_width="wrap_content"
        	         android:layout_height="wrap_content"
        	         android:text="@string/no_times"/>
    </LinearLayout>
</RelativeLayout>
