<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
      android:layout_width="fill_parent"
      android:layout_height="fill_parent" 
      android:orientation="vertical">
    <LinearLayout
        android:id="@+id/ListLayout"
        android:layout_above="@+id/FooterLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <ListView android:id="@+id/android:list"
                  android:layout_width="wrap_content"
        	      android:layout_height="wrap_content"/>
  	       <TextView android:id="@+id/android:empty"
                     android:layout_width="wrap_content"
        	         android:layout_height="wrap_content"
        	         android:text="@string/no_times"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/FooterLayout"
        android:layout_alignParentBottom="true"
        android:layout_height="wrap_content" android:layout_width="fill_parent">

        <EditText
            android:id="@+id/startReportDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:inputType="date"
            android:text="@string/empty_date"
            android:textSize="18sp" />
        <EditText
            android:id="@+id/endReportDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/reportTo"
            android:inputType="date"
            android:text="@string/empty_date"
            android:textSize="18sp" />
        <TextView 
            android:layout_width="wrap_content" 
            android:text="@string/lab_report_to" 
            android:id="@+id/reportTo" 
            android:textSize="18sp" 
            android:layout_height="wrap_content" 
            android:layout_centerVertical="true" 
            android:layout_toRightOf="@+id/startReportDate" 
            android:layout_margin="3sp" />
        <TextView 
            android:layout_width="wrap_content" 
            android:text="@string/empty_time" 
            android:id="@+id/reportTotal" 
            android:textSize="18sp" 
            android:layout_height="wrap_content" 
            android:layout_centerVertical="true" 
            android:layout_toRightOf="@+id/endReportDate" 
            android:layout_margin="3sp"/>
    </RelativeLayout>
</RelativeLayout>
